--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -10,22 +10,22 @@
   <body>
     <main class="container">
       <div class="addBox">
-        <iconify-icon icon="bi:plus-circle-dotted"></iconify-icon>
+        <iconify-icon icon="carbon:add"></iconify-icon>
         <h1>Add new Note</h1>
       </div>
       <div class="note">
         <h1>Note Title</h1>
         <p>
           Data for icons is open source and is available for everyone to use.
-          You can use it with various icon components, create your own
+          <!-- You can use it with various icon components, create your own
           components that use Iconify as source or just export raw SVGs. All
           icons are validated, cleaned up and automatically kept up to date.
           About Iconify Iconify gives you freedom to choose icons, while using
           same open source icon components and tools. Visit Iconify website to
-          learn more about the project.
+          learn more about the project. -->
         </p>
         <hr />
-        <div class="date">12-October-2022</div>
+        <section class="date">12-October-2022</section>
       </div>
     </main>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
