--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -11,13 +11,15 @@
     <main class="container">
       <!--  add new notebox -->
       <aside class="notepopup">
-        <h2>Add a new Note</h2>
-        <hr />
-        <h3>Title</h3>
-        <input type="text" placeholder="Enter Title Here" />
-        <h3>Description</h3>
-        <textarea name="note" id="" cols="30" rows="10"></textarea>
-        <button class="save">Add Note</button>
+        <aside class="containerNOte">
+          <h2>Add a new Note</h2>
+          <hr />
+          <h3>Title</h3>
+          <input type="text" placeholder="Enter Title Here" />
+          <h3>Description</h3>
+          <textarea name="note" id="" cols="30" rows="10"></textarea>
+          <button class="save">Add Note</button>
+        </aside>
       </aside>
       <!-- the content vivew -->
       <div class="addBox">
