--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -10,15 +10,22 @@
   <body>
     <main class="container">
       <!--  add new notebox -->
-      <aside class="notepopup">
+      <aside class="notepopup display">
         <aside class="containerNOte">
-          <h2>Add a new Note</h2>
+          <aside class="titleholder">
+            <h2>Add a new Note</h2>
+            <aside class="cl">
+              <iconify-icon icon="iconoir:cancel"></iconify-icon>
+            </aside>
+          </aside>
           <hr />
-          <h3>Title</h3>
-          <input type="text" placeholder="Enter Title Here" />
-          <h3>Description</h3>
-          <textarea name="note" id="" cols="30" rows="10"></textarea>
-          <button class="save">Add Note</button>
+          <aside class="buttoncontent">
+            <h3>Title</h3>
+            <input type="text" placeholder="Enter Title Here" />
+            <h3>Description</h3>
+            <textarea name="note" id="" cols="30" rows="6"></textarea>
+            <button class="save">Add Note</button>
+          </aside>
         </aside>
       </aside>
       <!-- the content vivew -->
