--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -55,5 +55,6 @@
       </div>
     </main>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
