--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -21,9 +21,15 @@
           <hr />
           <aside class="buttoncontent">
             <h3>Title</h3>
-            <input type="text" placeholder="Enter Title Here" />
+            <input type="text" class="title" placeholder="Enter Title Here" />
             <h3>Description</h3>
-            <textarea name="note" id="" cols="30" rows="6"></textarea>
+            <textarea
+              class="body"
+              name="note"
+              id=""
+              cols="30"
+              rows="6"
+            ></textarea>
             <button class="save">Add Note</button>
           </aside>
         </aside>
