--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -57,7 +57,7 @@
           <footer class="settings">
             <iconify-icon icon="carbon:overflow-menu-horizontal"></iconify-icon>
           </footer>
-          <section class="popupbtn">
+          <section class="popupbtn display">
             <h4>
               <iconify-icon icon="clarity:note-edit-line"></iconify-icon>
               <span> Edit</span>
@@ -74,6 +74,3 @@
     <script src="./app.js"></script>
   </body>
 </html>
-
-<iconify-icon icon="clarity:note-edit-line"></iconify-icon>
-<iconify-icon icon="ant-design:delete-filled"></iconify-icon>
