--- a/17-Notes-app/index.html
+++ b/17-Notes-app/index.html
@@ -39,17 +39,17 @@
         <iconify-icon icon="carbon:add"></iconify-icon>
         <h3>Add new Note</h3>
       </div>
-      <div class="note">
+      <!-- <div class="note">
         <article>
           <h1>Note Title</h1>
           <p>
             Data for icons is open source and is available for everyone to use.
             You can use it with various icon components, create your own
             components that use Iconify as source or just export raw SVGs. All
-            --> icons are validated, cleaned up and automatically kept up to
-            date. --> About Iconify Iconify gives you freedom to choose icons,
+            icons are validated, cleaned up and automatically kept up to
+            date.  About Iconify Iconify gives you freedom to choose icons,
             while using same open source icon components and tools. Visit
-            Iconify website to learn more about the project. --> -->
+            Iconify website to learn more about the project. 
           </p>
         </article>
         <section class="footer">
@@ -68,7 +68,7 @@
             </h4>
           </section>
         </section>
-      </div>
+      </div> -->
     </main>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="./app.js"></script>
