--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -11,6 +11,10 @@
     <div class="container">
       <h1>Upload your images</h1>
       <p>PNG, JPG and GIF files are allowed</p>
+      <div class="dragZone">
+        <iconify-icon icon="bi:cloud-upload-fill"></iconify-icon>
+        Drag and drop or browse to choose a file
+      </div>
     </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
   </body>
