--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -13,7 +13,7 @@
       <p>PNG, JPG and GIF files are allowed</p>
       <div class="dragZone">
         <iconify-icon icon="bi:cloud-upload-fill"></iconify-icon>
-        Drag and drop or browse to choose a file
+        <p>Drag and drop or browse to choose a file</p>
       </div>
     </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
