--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -17,5 +17,6 @@
       </div>
     </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
