--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -1,22 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
-  </head>
-  <body>
-    <div class="container">
-      <h1>Upload your images</h1>
-      <p>PNG, JPG and GIF files are allowed</p>
-      <div class="dragZone">
-        <iconify-icon icon="bi:cloud-upload-fill"></iconify-icon>
-        <p>Drag and drop or browse to choose a file</p>
-      </div>
-    </div>
-    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
-    <script src="./app.js"></script>
-  </body>
-</html>
+
+<head>
+  <title>Drag and Drop File Upload</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="/assets/favicon.ico" />
+  <link rel="stylesheet" href="./src/main.css" />
+</head>
