--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -7,3 +7,11 @@
   <link rel="shortcut icon" href="/assets/favicon.ico" />
   <link rel="stylesheet" href="./src/main.css" />
 </head>
+<body>
+  <div class="drop-zone">
+    <span class="drop-zone__prompt">Drop file here or click to upload</span>
+    <input type="file" name="myFile" class="drop-zone__input" />
+  </div>
+
+  <script src="./src/main.js"></script>
+</body>
