--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="/assets/favicon.ico" />
-  <link rel="stylesheet" href="./src/main.css" />
+  <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
   <div class="drop-zone">
@@ -13,5 +13,5 @@
     <input type="file" name="myFile" class="drop-zone__input" />
   </div>
 
-  <script src="./src/main.js"></script>
+  <script src="./app.js"></script>
 </body>
