--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta charset="utf-8" />
   <link rel="shortcut icon" href="/assets/favicon.ico" />
-  <link rel="stylesheet" href="./style.css" />
+  <link rel="stylesheet" href="./src/main.css" />
 </head>
+
 <body>
   <div class="drop-zone">
     <span class="drop-zone__prompt">Drop file here or click to upload</span>
     <input type="file" name="myFile" class="drop-zone__input" />
   </div>
-
-  <script src="./app.js"></script>
 </body>
