--- a/18- upload or drag & drop file /index.html
+++ b/18- upload or drag & drop file /index.html
@@ -13,4 +13,6 @@
     <span class="drop-zone__prompt">Drop file here or click to upload</span>
     <input type="file" name="myFile" class="drop-zone__input" />
   </div>
+  <script src="./app.js"></script>
 </body>
+</html>
