--- a/19-Qoute Generator/index.html
+++ b/19-Qoute Generator/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Quote Generator</title>
   </head>
-  <body></body>
+  <body>
+    <div class="qouteContianer">
+      <div class="qouteHeader">
+        <h1>Quote OF THE DAY</h1>
+      </div>
+      <div class="qouteContent">
+        <div class="qoutetext"></div>
+      </div>
+    </div>
+  </body>
 </html>
