--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -12,8 +12,29 @@
         <h1>Quote OF THE DAY</h1>
       </div>
       <div class="qouteContent">
-        <div class="qoutetext"></div>
+        <div class="qoutetext">
+          <iconify-icon icon="bxs:quote-left"></iconify-icon>
+          <p class="qoute">
+            Never give up because you never know if the next try is going to be
+            the one that works.
+          </p>
+          <iconify-icon icon="bxs:quote-right"></iconify-icon>
+        </div>
+        <div class="quoteAuthor">
+          <span>--</span>
+          <span class="author">Mary kay Ash </span>
+        </div>
+      </div>
+
+      <div class="features">
+        <div class="effects">
+          <iconify-icon icon="charm:sound-up"></iconify-icon>
+          <iconify-icon icon="ant-design:copy-filled"></iconify-icon>
+          <iconify-icon icon="akar-icons:facebook-fill"></iconify-icon>
+        </div>
       </div>
     </div>
+
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
   </body>
 </html>
