--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -28,10 +28,15 @@
 
       <div class="features">
         <div class="effects">
-          <iconify-icon icon="charm:sound-up"></iconify-icon>
-          <iconify-icon icon="ant-design:copy-filled"></iconify-icon>
-          <iconify-icon icon="akar-icons:facebook-fill"></iconify-icon>
+          <p><iconify-icon icon="charm:sound-up"></iconify-icon></p>
+          <p>
+            <iconify-icon icon="ant-design:copy-filled"></iconify-icon>
+          </p>
+          <p>
+            <iconify-icon icon="akar-icons:facebook-fill"></iconify-icon>
+          </p>
         </div>
+        <button>New Quote</button>
       </div>
     </div>
 
