--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quote Generator</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="qouteContianer">
-      <div class="qouteHeader">
+    <div class="QuoteContianer">
+      <div class="QuoteHeader">
         <h1>Quote OF THE DAY</h1>
       </div>
       <div class="qouteContent">
