--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="QuoteContianer">
       <div class="QuoteHeader">
-        <h1>Quote OF THE DAY</h1>
+        <h1>Quote of the Day</h1>
       </div>
       <div class="qouteContent">
         <div class="qoutetext">
