--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -14,12 +14,12 @@
       </div>
       <div class="qouteContent">
         <div class="qoutetext">
-          <iconify-icon icon="bxs:quote-left"></iconify-icon>
+          <iconify-icon class="left" icon="bxs:quote-left"></iconify-icon>
           <p class="qoute">
             Never give up because you never know if the next try is going to be
             the one that works.
           </p>
-          <iconify-icon icon="bxs:quote-right"></iconify-icon>
+          <iconify-icon class="right" icon="bxs:quote-right"></iconify-icon>
         </div>
         <div class="quoteAuthor">
           <span>--</span>
