--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -22,14 +22,7 @@
           <iconify-icon class="right" icon="bxs:quote-right"></iconify-icon>
         </div>
         <div class="quoteAuthor">
-          <span
-            style="
-              font-family: monospace;
-              margin: -5px 1px 0 0;
-              font-weight: 600;
-            "
-            >__</span
-          >
+          <span class="line">__</span>
           <span class="author">Mary kay Ash </span>
         </div>
       </div>
