--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -40,7 +40,7 @@
         <button>New Quote</button>
       </div>
     </div>
-
+    <script src="./app.js"></script>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
   </body>
 </html>
