--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -12,20 +12,7 @@
       <div class="QuoteHeader">
         <h1>Quote of the Day</h1>
       </div>
-      <div class="qouteContent">
-        <div class="qoutetext">
-          <iconify-icon class="left" icon="bxs:quote-left"></iconify-icon>
-          <p class="qoute">
-            Never give up because you never know if the next try is going to be
-            the one that works.
-          </p>
-          <iconify-icon class="right" icon="bxs:quote-right"></iconify-icon>
-        </div>
-        <div class="quoteAuthor">
-          <span class="line">__</span>
-          <span class="author">Mary kay Ash </span>
-        </div>
-      </div>
+      <div class="qouteContent"></div>
 
       <div class="features">
         <div class="effects">
