--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="loader"></div>
     <div class="QuoteContianer">
       <div class="QuoteHeader">
         <h1>Quote of the Day</h1>
@@ -15,15 +16,12 @@
       <div class="qouteContent">
         <div class="qoutetext">
           <iconify-icon class="left" icon="bxs:quote-left"></iconify-icon>
-          <p class="qoute">
-            Never give up because you never know if the next try is going to be
-            the one that works.
-          </p>
+          <p class="qoute"></p>
           <iconify-icon class="right" icon="bxs:quote-right"></iconify-icon>
         </div>
         <div class="quoteAuthor">
           <span class="line">__</span>
-          <span class="author">Mary kay Ash </span>
+          <span class="author"> </span>
         </div>
       </div>
 
