--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -27,7 +27,9 @@
 
       <div class="features">
         <div class="effects">
-          <p><iconify-icon icon="charm:sound-up"></iconify-icon></p>
+          <p class="sound">
+            <iconify-icon icon="charm:sound-up"></iconify-icon>
+          </p>
           <p>
             <iconify-icon icon="ant-design:copy-filled"></iconify-icon>
           </p>
