--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -30,9 +30,11 @@
           <p class="sound">
             <iconify-icon icon="charm:sound-up"></iconify-icon>
           </p>
-          <p>
+          <p class="copy">
             <iconify-icon icon="ant-design:copy-filled"></iconify-icon>
           </p>
+          <div class="copied">COPIED</div>
+
           <p>
             <iconify-icon icon="akar-icons:facebook-fill"></iconify-icon>
           </p>
