--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -33,7 +33,10 @@
           <p class="copy">
             <iconify-icon icon="ant-design:copy-filled"></iconify-icon>
           </p>
-          <div class="copied">COPIED</div>
+          <div class="copied">
+            <h6>COPIED</h6>
+            <iconify-icon icon="eva:clipboard-fill"></iconify-icon>
+          </div>
 
           <p>
             <iconify-icon icon="akar-icons:facebook-fill"></iconify-icon>
