--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -38,7 +38,7 @@
             <iconify-icon icon="eva:clipboard-fill"></iconify-icon>
           </div>
 
-          <p>
+          <p class="twitter">
             <iconify-icon icon="akar-icons:facebook-fill"></iconify-icon>
           </p>
         </div>
