--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -39,7 +39,7 @@
           </div>
 
           <p class="twitter">
-            <iconify-icon icon="akar-icons:facebook-fill"></iconify-icon>
+            <iconify-icon icon="akar-icons:twitter-fill"></iconify-icon>
           </p>
         </div>
         <button>New Quote</button>
