--- a/19-Quote Generator/index.html
+++ b/19-Quote Generator/index.html
@@ -42,7 +42,7 @@
             <iconify-icon icon="akar-icons:twitter-fill"></iconify-icon>
           </p>
         </div>
-        <button>New Quote</button>
+        <button>New quote</button>
       </div>
     </div>
     <script src="./app.js"></script>
