--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -4,11 +4,28 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
   </head>
   <body>
-    <button>CLICK</button>
-
+    <div class=""></div>
+    <div class="weatherin">
+      <div>
+        <h1>Weather in</h1>
+        <input type="text" placeholder="What City?" />
+        <div class="container"></div>
+      </div>
+      <div class="display">
+        <p class="city">shen zhen</p>
+        <h1>
+          16
+          <span
+            ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon
+          ></span>
+        </h1>
+      </div>
+    </div>
     <script src="./app.js"></script>
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
   </body>
 </html>
