--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -13,16 +13,38 @@
       <div>
         <h1>Weather in</h1>
         <input type="text" placeholder="What City?" />
-        <div class="container"></div>
       </div>
-      <div class="display">
-        <p class="city">shen zhen</p>
-        <h1>
-          16
-          <span
-            ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon
-          ></span>
-        </h1>
+    </div>
+    <div class="display">
+      <p class="city">shen zhen</p>
+      <h1>
+        16<span
+          ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon
+        ></span>
+      </h1>
+      <div class="days">
+        <div class="today">
+          <div class="left">
+            <p class="dot">
+              <iconify-icon
+                icon="fluent-emoji-flat:yellow-circle"
+              ></iconify-icon>
+            </p>
+            <p class="dayname">Sunday</p>
+          </div>
+          <div class="right">
+            <div class="degree">
+              16<span
+                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
+              </span>
+            </div>
+            <p class="icon">
+              <iconify-icon
+                icon="fluent:time-and-weather-24-regular"
+              ></iconify-icon>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
     <script src="./app.js"></script>
