--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -17,8 +17,8 @@
     </div>
     <div class="display">
       <p class="city">shen zhen</p>
-      <h1>
-        16<span
+      <h1 class="degreetop">
+        16<span class="degreec"
           ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon
         ></span>
       </h1>
