--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -6,6 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class=""></div>
@@ -17,11 +23,12 @@
     </div>
     <div class="display">
       <p class="city">shen zhen</p>
-      <h1 class="degreetop">
-        16<span class="degreec"
-          ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon
-        ></span>
-      </h1>
+      <div class="center">
+        <h1 class="degreetop">16</h1>
+        <div class="pos">
+          <iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
+        </div>
+      </div>
       <div class="days">
         <div class="today">
           <div class="left">
@@ -30,6 +37,86 @@
                 icon="fluent-emoji-flat:yellow-circle"
               ></iconify-icon>
             </p>
+            <p class="dayname">Sunday</p>
+          </div>
+          <div class="right">
+            <div class="degree">
+              16<span
+                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
+              </span>
+            </div>
+            <p class="icon">
+              <iconify-icon
+                icon="fluent:time-and-weather-24-regular"
+              ></iconify-icon>
+            </p>
+          </div>
+        </div>
+
+        <!-- tomorow -->
+
+        <div class="today">
+          <div class="lefts">
+            <p class="dayname">Sunday</p>
+          </div>
+          <div class="right">
+            <div class="degree">
+              16<span
+                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
+              </span>
+            </div>
+            <p class="icon">
+              <iconify-icon
+                icon="fluent:time-and-weather-24-regular"
+              ></iconify-icon>
+            </p>
+          </div>
+        </div>
+
+        <!-- tomorow -->
+
+        <div class="today">
+          <div class="lefts">
+            <p class="dayname">Sunday</p>
+          </div>
+          <div class="right">
+            <div class="degree">
+              16<span
+                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
+              </span>
+            </div>
+            <p class="icon">
+              <iconify-icon
+                icon="fluent:time-and-weather-24-regular"
+              ></iconify-icon>
+            </p>
+          </div>
+        </div>
+
+        <!-- tomorow -->
+
+        <div class="today">
+          <div class="lefts">
+            <p class="dayname">Sunday</p>
+          </div>
+          <div class="right">
+            <div class="degree">
+              16<span
+                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
+              </span>
+            </div>
+            <p class="icon">
+              <iconify-icon
+                icon="fluent:time-and-weather-24-regular"
+              ></iconify-icon>
+            </p>
+          </div>
+        </div>
+
+        <!-- tomorow -->
+
+        <div class="today">
+          <div class="lefts">
             <p class="dayname">Sunday</p>
           </div>
           <div class="right">
