--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -22,7 +22,7 @@
       </div>
     </div>
     <div class="display">
-      <p class="city">shen zhen</p>
+      <p class="city"></p>
       <div class="center">
         <h1 class="degreetop">16</h1>
         <div class="pos">
