--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -22,9 +22,10 @@
       </div>
     </div>
     <div class="display">
+      <img src="http://openweathermap.org/img/w/04d.png" alt="" class="icon" />
       <p class="city"></p>
       <div class="center">
-        <h1 class="degreetop">16</h1>
+        <h1 class="degreetop"></h1>
         <div class="pos">
           <iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
         </div>
