--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -22,7 +22,11 @@
       </div>
     </div>
     <div class="display">
-      <img src="http://openweathermap.org/img/w/04d.png" alt="" class="icon" />
+      <img
+        src="http://openweathermap.org/img/w/04d.png"
+        alt=""
+        class="showIcon"
+      />
       <p class="city"></p>
       <div class="center">
         <h1 class="degreetop"></h1>
