--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -22,11 +22,7 @@
       </div>
     </div>
     <div class="display">
-      <img
-        src="http://openweathermap.org/img/w/04d.png"
-        alt=""
-        class="showIcon"
-      />
+      <img src="" alt="" class="showIcon" />
       <p class="city"></p>
       <div class="center">
         <h1 class="degreetop"></h1>
