--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -62,7 +62,7 @@
           </div>
           <div class="right">
             <div class="degree">
-              16<span
+              <p>16</p><sppan
                 ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
               </span>
             </div>
@@ -81,10 +81,9 @@
             <p class="dayname">Sunday</p>
           </div>
           <div class="right">
-            <div class="degree">
-              16<span
-                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
-              </span>
+            <div class="smallweather">
+              <p class="degree">16</p>
+              <p class="circle"><iconify-icon icon="fa:circle-o"></iconify-icon></p>
             </div>
             <p class="icon">
               <iconify-icon
