--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -41,30 +41,11 @@
             <p class="dayname">Sunday</p>
           </div>
           <div class="right">
-            <div class="degree">
-              16<span
-                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
-              </span>
-            </div>
-            <p class="icon">
-              <iconify-icon
-                icon="fluent:time-and-weather-24-regular"
-              ></iconify-icon>
-            </p>
-          </div>
-        </div>
-
-        <!-- tomorow -->
-
-        <div class="today">
-          <div class="lefts">
-            <p class="dayname">Sunday</p>
-          </div>
-          <div class="right">
-            <div class="degree">
-              <p>16</p><sppan
-                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
-              </span>
+            <div class="smallweather">
+              <p class="degree">16</p>
+              <p class="circle">
+                <iconify-icon icon="fa:circle-o"></iconify-icon>
+              </p>
             </div>
             <p class="icon">
               <iconify-icon
@@ -83,7 +64,9 @@
           <div class="right">
             <div class="smallweather">
               <p class="degree">16</p>
-              <p class="circle"><iconify-icon icon="fa:circle-o"></iconify-icon></p>
+              <p class="circle">
+                <iconify-icon icon="fa:circle-o"></iconify-icon>
+              </p>
             </div>
             <p class="icon">
               <iconify-icon
@@ -100,10 +83,11 @@
             <p class="dayname">Sunday</p>
           </div>
           <div class="right">
-            <div class="degree">
-              16<span
-                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
-              </span>
+            <div class="smallweather">
+              <p class="degree">16</p>
+              <p class="circle">
+                <iconify-icon icon="fa:circle-o"></iconify-icon>
+              </p>
             </div>
             <p class="icon">
               <iconify-icon
@@ -120,10 +104,32 @@
             <p class="dayname">Sunday</p>
           </div>
           <div class="right">
-            <div class="degree">
-              16<span
-                ><iconify-icon icon="mdi:temperature-celsius"></iconify-icon>
-              </span>
+            <div class="smallweather">
+              <p class="degree">16</p>
+              <p class="circle">
+                <iconify-icon icon="fa:circle-o"></iconify-icon>
+              </p>
+            </div>
+            <p class="icon">
+              <iconify-icon
+                icon="fluent:time-and-weather-24-regular"
+              ></iconify-icon>
+            </p>
+          </div>
+        </div>
+
+        <!-- tomorow -->
+
+        <div class="today">
+          <div class="lefts">
+            <p class="dayname">Sunday</p>
+          </div>
+          <div class="right">
+            <div class="smallweather">
+              <p class="degree">16</p>
+              <p class="circle">
+                <iconify-icon icon="fa:circle-o"></iconify-icon>
+              </p>
             </div>
             <p class="icon">
               <iconify-icon
