--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -33,11 +33,6 @@
       <div class="days">
         <div class="today">
           <div class="left">
-            <p class="dot">
-              <iconify-icon
-                icon="fluent-emoji-flat:yellow-circle"
-              ></iconify-icon>
-            </p>
             <p class="dayname">Sunday</p>
           </div>
           <div class="right">
@@ -68,11 +63,7 @@
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
             </div>
-            <p class="icon">
-              <iconify-icon
-                icon="fluent:time-and-weather-24-regular"
-              ></iconify-icon>
-            </p>
+            <img src="" alt="" class="icon" />
           </div>
         </div>
 
