--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -32,7 +32,7 @@
       </div>
       <div class="days">
         <div class="today">
-          <div class="left">
+          <div class="lefts">
             <p class="dayname">Sunday</p>
           </div>
           <div class="right">
@@ -42,11 +42,11 @@
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
             </div>
-            <p class="icon">
-              <iconify-icon
-                icon="fluent:time-and-weather-24-regular"
-              ></iconify-icon>
-            </p>
+            <img
+              src="http://openweathermap.org/img/w/03d.png"
+              alt=""
+              class="icon"
+            />
           </div>
         </div>
 
@@ -63,7 +63,11 @@
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
             </div>
-            <img src="" alt="" class="icon" />
+            <img
+              src="http://openweathermap.org/img/w/03d.png"
+              alt=""
+              class="icon"
+            />
           </div>
         </div>
 
@@ -80,11 +84,11 @@
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
             </div>
-            <p class="icon">
-              <iconify-icon
-                icon="fluent:time-and-weather-24-regular"
-              ></iconify-icon>
-            </p>
+            <img
+              src="http://openweathermap.org/img/w/03d.png"
+              alt=""
+              class="icon"
+            />
           </div>
         </div>
 
@@ -101,11 +105,11 @@
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
             </div>
-            <p class="icon">
-              <iconify-icon
-                icon="fluent:time-and-weather-24-regular"
-              ></iconify-icon>
-            </p>
+            <img
+              src="http://openweathermap.org/img/w/03d.png"
+              alt=""
+              class="icon"
+            />
           </div>
         </div>
 
@@ -122,11 +126,11 @@
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
             </div>
-            <p class="icon">
-              <iconify-icon
-                icon="fluent:time-and-weather-24-regular"
-              ></iconify-icon>
-            </p>
+            <img
+              src="http://openweathermap.org/img/w/03d.png"
+              alt=""
+              class="icon"
+            />
           </div>
         </div>
       </div>
