--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -18,7 +18,15 @@
     <div class="weatherin">
       <div>
         <h1>Weather in</h1>
-        <input type="text" placeholder="What City?" />
+        <form class="search-wrapper cf">
+          <input
+            type="text"
+            placeholder="What City?"
+            required
+            style="box-shadow: none"
+          />
+          <button type="submit">Get Started</button>
+        </form>
       </div>
     </div>
     <div class="display">
