--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -18,14 +18,9 @@
     <div class="weatherin">
       <div>
         <h1>Weather in</h1>
-        <form class="search-wrapper cf">
-          <input
-            type="text"
-            placeholder="What City?"
-            required
-            style="box-shadow: none"
-          />
-          <button type="submit">Get Started</button>
+        <form>
+          <input type="text" placeholder="What City?" />
+          <button>Search</button>
         </form>
       </div>
     </div>
