--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -20,7 +20,7 @@
         <h1>Weather in</h1>
         <form>
           <input type="text" placeholder="What City?" />
-          <button>Search</button>
+          <button id="search">Search</button>
         </form>
       </div>
     </div>
