--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -19,7 +19,7 @@
       <div>
         <h1>Weather in</h1>
         <form>
-          <input type="text" placeholder="What City?" />
+          <input type="text" class="input" placeholder="What City?" />
           <button id="search">Search</button>
         </form>
       </div>
