--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -14,8 +14,8 @@
     />
   </head>
   <body>
-    <!-- <div class="loader"></div>
-    <div class=""></div> -->
+    <div class="loader"></div>
+
     <div class="weatherin">
       <div>
         <h1>Weather in</h1>
