--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -37,11 +37,11 @@
       <div class="days">
         <div class="today">
           <div class="lefts">
-            <p class="dayname">Sunday</p>
+            <p class="dayname"></p>
           </div>
           <div class="right">
             <div class="smallweather">
-              <p class="degree">16</p>
+              <p class="degree"></p>
               <p class="circle">
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
@@ -58,11 +58,11 @@
 
         <div class="today">
           <div class="lefts">
-            <p class="dayname">Sunday</p>
+            <p class="dayname"></p>
           </div>
           <div class="right">
             <div class="smallweather">
-              <p class="degree">16</p>
+              <p class="degree"></p>
               <p class="circle">
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
@@ -79,11 +79,11 @@
 
         <div class="today">
           <div class="lefts">
-            <p class="dayname">Sunday</p>
+            <p class="dayname"></p>
           </div>
           <div class="right">
             <div class="smallweather">
-              <p class="degree">16</p>
+              <p class="degree"></p>
               <p class="circle">
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
@@ -100,11 +100,11 @@
 
         <div class="today">
           <div class="lefts">
-            <p class="dayname">Sunday</p>
+            <p class="dayname"></p>
           </div>
           <div class="right">
             <div class="smallweather">
-              <p class="degree">16</p>
+              <p class="degree"></p>
               <p class="circle">
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
@@ -121,11 +121,11 @@
 
         <div class="today">
           <div class="lefts">
-            <p class="dayname">Sunday</p>
+            <p class="dayname"></p>
           </div>
           <div class="right">
             <div class="smallweather">
-              <p class="degree">16</p>
+              <p class="degree"></p>
               <p class="circle">
                 <iconify-icon icon="fa:circle-o"></iconify-icon>
               </p>
