--- a/20-Weather-Api/index.html
+++ b/20-Weather-Api/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <div class="loader"></div>
+    <div id="loader" class="loader"></div>
 
     <div class="weatherin">
       <div>
