--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -11,13 +11,14 @@
     <nav>WordBeater</nav>
     <div class="container">
       <h4>Type The Given Word WIth in <span>5</span> Seconds</h4>
-      <h1>WORD</h1>
-      <input type="text" placeholder="Start Typing" />
-      <h2>Game Over!!!</h2>
+      <h1></h1>
+      <input type="text" placeholder="Start Typing..." />
+      <h2></h2>
       <div class="time-counter">
         <p>Time left: <span class="counter">5</span></p>
         <p>Score: <span class="score">5</span></p>
       </div>
     </div>
+    <script src="./app.js"></script>
   </body>
 </html>
