--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -12,7 +12,7 @@
     <div class="container">
       <h4>Type The Given Word WIth in <span>5</span> Seconds</h4>
       <h1></h1>
-      <input type="text" placeholder="Start Typing..." />
+      <input type="text" placeholder="Start Typing..." autofocus />
       <h2></h2>
       <div class="time-counter">
         <p>Time left: <span class="counter">5</span></p>
