--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -19,18 +19,20 @@
           vibraphone can hardly be considered a pardine process without also
           being an archaeology. The bay of a hyacinth becomes.
         </p>
-        <div class="stats">
-          <div class="timeleft">
-            <p>Time Left <span>60</span>s</p>
-          </div>
-          <div class="timeleft">
-            <p>Mistakes <span>0</span></p>
-          </div>
-          <div class="timeleft">
-            <p>WPM<span>0</span></p>
-          </div>
-          <div class="timeleft">
-            <p>CPM<span>0</span></p>
+        <div class="Rules">
+          <div class="stats">
+            <div class="timeleft">
+              <p>Time Left <span>60</span>s</p>
+            </div>
+            <div class="timeleft">
+              <p>Mistakes <span>0</span></p>
+            </div>
+            <div class="timeleft">
+              <p>WPM<span>0</span></p>
+            </div>
+            <div class="timeleft">
+              <p>CPM<span>0</span></p>
+            </div>
           </div>
           <button>Try Again</button>
         </div>
