--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="wrapper">
       <div class="container">
-        <p>
+        <p class="text">
           A tramp is a siamese from the right perspective. We know that a
           flitting monkey's jaw comes with it the thought that the submersed
           break is a pamphlet. Their cream was, in this moment, a seedy
