--- a/21-Speed Test Game/index.html
+++ b/21-Speed Test Game/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
+    <!-- 1119907 -->
     <div class="wrapper">
       <div class="container">
         <p class="text">
@@ -22,16 +29,16 @@
         <div class="Rules">
           <div class="stats">
             <div class="timeleft">
-              <p>Time Left <span>60</span>s</p>
+              <p>Time Left: <span> 60</span>s</p>
             </div>
             <div class="timeleft">
-              <p>Mistakes <span>0</span></p>
+              <p>Mistakes: <span> 0</span></p>
             </div>
             <div class="timeleft">
-              <p>WPM<span>0</span></p>
+              <p>WPM: <span> 0</span></p>
             </div>
             <div class="timeleft">
-              <p>CPM<span>0</span></p>
+              <p>CPM: <span> 0</span></p>
             </div>
           </div>
           <button>Try Again</button>
